--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
 spring.application.name=spring-pizzeria-crud
+
+## Setup database connection with jdbc
+spring.datasource.url=jdbc:mysql://localhost:3306/pizzeria_db
+spring.datasource.username=root
+spring.datasource.password=password
+
+## Hibernate properties
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL8Dialect
+
+# Hiberntate ddl auto(create, update, create-drop, validate, none)
+spring.jpa.hibernate.ddl-auto=create-drop
+
+
+## Not Necessary to make it work
+spring.flyway.init-sqls=true
+spring.jpa.show-sql=true
