added some style + bootstrap

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,10 +8,10 @@ spring.datasource.password=password
 ## Hibernate properties
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL8Dialect
 
-# Hiberntate ddl auto(create, update, create-drop, validate, none)
+#Hiberntate ddl auto(create, update, create-drop, validate, none)
 spring.jpa.hibernate.ddl-auto=create-drop
 
 
 ## Not Necessary to make it work
-spring.flyway.init-sqls=true
+spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
