--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.password=password
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL8Dialect
 
 #Hiberntate ddl auto(create, update, create-drop, validate, none)
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 
 
 ## Not Necessary to make it work
